Nav fix on safari browser

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -8,11 +8,17 @@
   display: flex;
   height: $nav-height;
   justify-content: space-between;
+  left: 0;
   padding: 0 50px;
   position: fixed;
   top: 0;
+  transition: left 200ms;
   width: 100vw;
   z-index: 10;
+
+  &.open {
+    left: -$hamburger-menu-width;
+  }
 
   .logo {
     align-items: center;
@@ -127,6 +133,11 @@
       height: 200px;
       margin-top: 100px;
       padding: 0 30px;
+      position: relative;
+
+      li {
+        height: calc(200px / 4);
+      }
 
       .line {
         background: white;
